@@ -1,3 +1,12 @@
+2011-02-23  Sergio Martin <sergio.martin@artica.es>
+
+	* extensions/update_manager.php
+	extensions/update_manager/lib/libupdate_manager_client.php
+	extensions/update_manager/lib/libupdate_manager.php
+	extensions/update_manager/main.php: Fixed some bugs of the 
+	open update manager like connection fail or auth messages, 
+	cleaning cache when update to show correct data, etc.
+
 2011-02-23 Miguel de Dios  <miguel.dedios@artica.es>
 
 	Merged bugfix from trunk.
